--- a/packages/index.html
+++ b/packages/index.html
@@ -5,18 +5,67 @@
     <title>Arrow photography</title>
 </head>
 <body>
-
     <h1>Arrow Photography</h1>
+        <ul>
+            <li><a href="../Index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../portfolio/index.html">Portfolio</a></li>
+            <li><a href="../packages/index.html">Packages</a></li>
+            <li><a href="../news.html">News</a></li>
+            <li><a href="../contact.html">Contact</a></li></ul>
+                <h2>Arrow Photography Available Packages</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                       Donec vel urna eu augue sollicitudin interdum sed non libero.
+                       Vestibulum facilisis lacus sit amet mi egestas, eu blandit neque imperdiet.
+                       Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+                       cubilia Curae; Sed ac nisl rutrum neque iaculis elementum. Cras dui massa,
+                       tempor id odio sed, faucibus adipiscing eros. Maecenas a suscipit eros,
+                       vitae accumsan dolor. Duis pulvinar purus urna, ac consequat diam consectetur a.</p>
+                <h3>Wedding Packages</h3>
+            <h4><em>Standard</em> Wedding Package</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+           Donec vel urna eu augue sollicitudin interdum sed non libero.
+           Vestibulum facilisis lacus sit amet mi egestas, eu blandit neque imperdiet.</p>
+            <p>Package includes:</p>
     <ul>
-        <li><a href="../Index.html">Home</a></li>
-        <li><a href="../about.html">About</a></li>
-        <li><a href="../portfolio/index.html">Portfolio</a></li>
-        <li><a href="../packages/index.html">Packages</a></li>
-        <li><a href="../news.html">News</a></li>
-        <li><a href="../contact.html">Contact</a></li>
+                <li>One Professional photographer;</li>
+                <li>Photographs of ceremony and wedding breakfast (>4 hours);</li>
+                <li>Leather bound album of images of your choice;</li>
+                <li>Editing & image adjustments.</li>
+                    <li><p><strong>Price: £895.00</strong></p></li></ul>
+                        <h4><em>Premier</em> Wedding Package</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                               Donec vel urna eu augue sollicitudin interdum sed non libero.
+                               Vestibulum facilisis lacus sit amet mi egestas, eu blandit neque imperdiet.</p>
+                                    <p>Package includes:</p>
+                                     <ul>
+                                        <li>Two Professional photographers;</li>
+                                        <li>Photographs of pre-ceremony preparation, ceremony and wedding breakfast (>8 hours);</li>
+                                        <li>Leather bound album of images of your choice;</li>
+                                        <li>Two 10x8 mounted photographs of the images of your choice</li>
+                                        <li>DVD of all photographs;</li>
+                                        <li>Editing & image adjustments;</li>
+                                        <li>Convenient handbag album to "show friends".</li>
+                                            <li><p><strong>Price: £1,695.00</strong></p></li></ul>
 
-    </ul>
-        <h2>News from Arrow Photography</h2>
-
+                            <h3>Portrait Packages</h3>
+                                <h4><em>Standard</em> Portrait Package</h4>
+                                    <p>Package includes:</p>
+                                        <ul>
+                                            <li>Professional photographer;</li>
+                                            <li>Photographs of friends, family or persons of your choice (>3 hours);</li>
+                                            <li>Fifteen 6x9 mounted photographs of images of your choice;</li>
+                                            <li>Editing & image adjustments;</li>
+                                            <li>Convenient handbag album to "show friends".</li>
+                                           <li><strong>Price: £695.00</strong></li></ul>
+                                                    <h4><em>Premier</em> Portrait Package</h4>
+                                                        <p>Package includes:</p>
+                                                            <ul>
+                                                                <li>Professional photographer;</li>
+                                                                <li>Photographs of friends, family or persons of your choice (maximum 6 hours);</li>
+                                                                <li>Twenty-five 6x9 mounted photographs of images of your choice;</li>
+                                                                <li>Editing & image adjustments;</li>
+                                                                <li>Convenient handbag album to "show friends"</li>
+                                                         <li><p><strong>Price: £895.00</strong></p></li></ul>
 </body>
 </html>
