Div & html5 section framework

--- a/about.html
+++ b/about.html
@@ -5,10 +5,11 @@
     <title>Arrow photography</title>
 </head>
 <body>
+<header>
 
     <h1>Arrow Photography</h1>
-
-<ul>
+<nav>
+<ul class="nav">
         <li><a href="Index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="portfolio/index.html">Portfolio</a></li>
@@ -16,7 +17,12 @@
         <li><a href="news.html">News</a></li>
         <li><a href="contact.html">Contact</a></li>
         </ul>
+    </nav>
+    </header>
+
+<footer>
     <h2>News from Arrow Photography</h2>
 
+</footer>
 </body>
 </html>
