--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,8 +5,10 @@
     <title>Arrow Photography</title>
 </head>
 <body>
+<header>
     <h1>Arrow Photography</h1>
-        <ul>
+        <nav>
+    <ul class="nav">
         <li><a href="../Index.html">Home</a></li>
         <li><a href="../about.html">About</a></li>
         <li><a href="../portfolio/index.html">Portfolio</a></li>
@@ -14,6 +16,11 @@
         <li><a href="../news.html">News</a></li>
         <li><a href="../contact.html">Contact</a></li>
             </ul>
+    </nav>
+</header>
+
+<section class="first">
+    <p><img src="../assets/images/ArrowPhotograhyPortfolio1.jpg" alt="Wedding Photography" /></p>
             <h3>Adele and John's Wedding, February 2014</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                    Donec vel urna eu augue sollicitudin interdum sed non libero.
@@ -24,6 +31,8 @@
                    Maecenas a suscipit eros, vitae accumsan dolor. Duis pulvinar
                    purus urna, ac consequat diam consectetur a. </p>
             <h3>Jane and Richard's Wedding, January 2014</h3>
+    </section>
+<section class="second">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                            Donec vel urna eu augue sollicitudin interdum sed non libero.
                            Vestibulum facilisis lacus sit amet mi egestas, eu blandit
@@ -33,7 +42,12 @@
                            odio sed, faucibus adipiscing eros. Maecenas a suscipit eros,
                            vitae accumsan dolor. Duis pulvinar purus urna, ac consequat
                            diam consectetur a.</p>
-    <h5>All images &copy;2014 Arrow Photography. All rights reserved.</h5>
+    </section>
+        <p><img src="../assets/images/ArrowPhotograhyPortfolio3.jpg" alt="Wedding Photography" /></p>
+            <p><img src="../assets/images/ArrowPhotograhyPortfolio4.jpg" alt="Wedding Photography" /></p>
+             <footer>
+                <h5>All images &copy;2014 Arrow Photography. All rights reserved.</h5>
+                     </footer>
 
 </body>
 </html>
