--- a/Index.html
+++ b/Index.html
@@ -5,31 +5,47 @@
     <title>Welcome to Arrow Photography</title>
 </head>
 <body>
-    <h1>Arrow Photography</h1>
-        <h2>Welcome to Arrow Photography</h2>
-        <ul>
-            <li><a href="Index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="portfolio/index.html">Portfolio</a></li>
-            <li><a href="packages/index.html">Packages</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <div id="header">
+        <h1>Arrow Photography</h1>
+            <ul class="nav">
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="portfolio/index.html">Portfolio</a></li>
+                <li><a href="packages/index.html">Packages</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+    </div>
+      <div id="content">
+          <p>
+              <img src="assets/images/ArrowPhotograhyFrontPage1.jpg" alt="Wedding Photography" /></p>
+         <p>
+                <div class="first section">
+                    <h2>Welcome to Arrow Photography</h2>
+                <p>
+                <img src="assets/images/ArrowPhotograhyFrontPage1.jpg" alt="Wedding Photography" /></p>
         <p>The 2 important parts to capturing a photograph - &ndash; &mdash; the subject and the location.
            At <strong>Arrow Photography</strong> we know how to emphasise the best in both!
         </p>
+    <p><img src="assets/images/ArrowPhotograhyFrontPage2.jpg" alt="Wedding Photography" /></p>
+    <p><img src="assets/images/ArrowPhotograhyFrontPage3.jpg" alt="Wedding Photography" /></p>
+    <p><img src="assets/images/ArrowPhotograhyFrontPage4.jpg" alt="Wedding Photography" /></p>
+    <p><img src="assets/images/ArrowPhotograhyFrontPage5.jpg" alt="Wedding Photography" /></p>
         <p>We have been professional photographers for 15 years, specialising
-           in modern and stylish wedding photography. You will want photographs
+           in <strong>modern and stylish wedding photography</strong>. You will want photographs
            of people or event that are creative, romantic and artistically taken...
            which is why we leave nothing to chance and photograph everything that
            is magical just as you wish it to be. Your photographs will be something
            that you, your families and friends will treasure forever.
         </p>
-        <p>Our style is friendly and relaxed enabling us to capture all those special
+        <p>Our style is <em>friendly and relaxed</em> enabling us to capture all those special
                 moments throughout the day with the minimum of fuss.
         </p>
+          </div>
+    <div class="second section">
         <h2>Recent Events</h2>
-            <h3>Adele and John's Wedding</h3>
+    <div class=" first subsection">
+        <h3>Adele and John's Wedding</h3>
         <p>Adele and John's Wedding Adele and John wanted some wedding photos of
             just themselves around Sydney Harbour with the <em>Sydney Opera House,
             Botanical Gardens</em> and <em>Sydney Harbour Bridge</em> as the backdrop.
@@ -45,9 +61,10 @@
         </p>
     <p>More&hellip;
     </p>
-
+</div>
+    <div class="second subsection">
             <h3>Jane and Richard's Wedding</h3>
-    <p>Jane and Richard's Wedding &ldquo; Jane and Richard's&rdquo; wedding was at <em>St. Wilfrid's Church, Calverley</em>
+    <p>Jane and Richard's Wedding &ldquo; Jane and Richard's &rdquo; wedding was at <em>St. Wilfrid's Church, Calverley</em>
         and the wedding reception took place at<em>the Mercure Parkway Hotel Leeds</em>. All the groomsmen
         were in kilts as the groom is Scottish and there was definitely a Scottish theme to the day.
         After the ceremony we were lucky enough for some sunshine to come out just at the right moment
@@ -58,9 +75,14 @@
     </p>
     <p>More &hellip;
     </p>
-        <ul>
+                </div>
+              </div>
+            </div>
+        <div id="footer">
+            <ul class="nav">
             <li><a href="general/terms.html">Terms &amp; Conditions</a></li>
             <li><a href="general/faq.html"><abbr title="Frequently Asked Questions">FAQ</abbr></a></li>
         </ul>
+            </div>
 </body>
 </html>
