--- a/news.html
+++ b/news.html
@@ -5,6 +5,8 @@
     <title>Arrow photography</title>
 </head>
 <body>
+<div class="container">
+<header>
 
     <h1>Arrow Photography</h1>
      <ul>
@@ -15,7 +17,13 @@
         <li><a href="news.html">News</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
+</header>
+<div id="content">
+    <section class="first">
+    <p><img src="assets/images/ArrowPhotograhyFrontPage3.jpg" alt="Wedding Photography" /></p>
         <h2>Arrow Photography's News, Views and Reviews</h2>
+
+         <article class="first">
             <h3>Best Portrait Awards 2014</h3>
                 <p>Aenean vitae felis id nibh porttitor tristique.
                    Nullam mattis elit sed pretium aliquet.
@@ -28,18 +36,29 @@
                    placerat nibh. Vivamus sapien orci, hendrerit
                    et molestie et, lacinia nec magna. Etiam diam erat,
                    aliquet sed tincidunt non, fermentum ut justo. </p>
-    <h3>Lorem Ipsum Dolor Sit Amet</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-           Donec vel urna eu augue sollicitudin interdum sed non libero.
-           Vestibulum facilisis lacus sit amet mi egestas, eu blandit
-           neque imperdiet. Vestibulum ante ipsum primis in faucibus
-           orci luctus et ultrices posuere cubilia Curae; Sed ac nisl
-           rutrum neque iaculis elementum. Cras dui massa, tempor id
-           odio sed, faucibus adipiscing eros. Maecenas a suscipit eros,
-           vitae accumsan dolor. Duis pulvinar purus urna, ac consequat
-           diam consectetur a.
-        </p>
+    </article>
+        <article class="second">
 
+            <h3>Lorem Ipsum Dolor Sit Amet</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+               Donec vel urna eu augue sollicitudin interdum sed non libero.
+               Vestibulum facilisis lacus sit amet mi egestas, eu blandit
+               neque imperdiet. Vestibulum ante ipsum primis in faucibus
+               orci luctus et ultrices posuere cubilia Curae; Sed ac nisl
+               rutrum neque iaculis elementum. Cras dui massa, tempor id
+               odio sed, faucibus adipiscing eros. Maecenas a suscipit eros,
+               vitae accumsan dolor. Duis pulvinar purus urna, ac consequat
+               diam consectetur a.
+            </p>
+        </article>
+    </section>
+</div>
+
+
+    <footer>
+
+    </footer>
+    </div>
 </body>
 </html>
 
