Div & html5 section framework

--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Welcome to Arrow Photography</title>
+    <link href="assets/css/styles.css" rel="stylesheet" media="all" />
 </head>
 <body>
-    <div id="header">
+    <header>
         <h1>Arrow Photography</h1>
             <ul class="nav">
                 <li><a href="Index.html">Home</a></li>
@@ -15,7 +16,7 @@
                 <li><a href="news.html">News</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-    </div>
+    </header>
       <div id="content">
           <p>
               <img src="assets/images/ArrowPhotograhyFrontPage1.jpg" alt="Wedding Photography" /></p>
