--- a/packages/index.html
+++ b/packages/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Arrow photography</title>
+    <link href="../assets/css/styles.css" rel="stylesheet" media="all" />
 </head>
 <body>
 <header>
@@ -38,23 +39,20 @@
            Donec vel urna eu augue sollicitudin interdum sed non libero.
            Vestibulum facilisis lacus sit amet mi egestas, eu blandit neque imperdiet.</p>
             <p>Package includes:</p>
-   <nav>
-    <ul class="nav">
+    <ul>
                 <li>One Professional photographer;</li>
                 <li>Photographs of ceremony and wedding breakfast (>4 hours);</li>
                 <li>Leather bound album of images of your choice;</li>
                 <li>Editing & image adjustments.</li>
                     <li><p><strong>Price: £895.00</strong></p></li>
     </ul>
-        </nav>
             </section>
                 <h4><em>Premier</em> Wedding Package</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                            Donec vel urna eu augue sollicitudin interdum sed non libero.
                            Vestibulum facilisis lacus sit amet mi egestas, eu blandit neque imperdiet.</p>
                     <p>Package includes:</p>
-            <nav>
-             <ul class="first">
+             <ul>
                 <li>Two Professional photographers;</li>
                 <li>Photographs of pre-ceremony preparation, ceremony and wedding breakfast (>8 hours);</li>
                 <li>Leather bound album of images of your choice;</li>
@@ -64,32 +62,32 @@
                 <li>Convenient handbag album to "show friends".</li>
                     <li><p><strong>Price: £1,695.00</strong></p></li>
          </ul>
-            </nav>
-       <section class="first">
+
+       <section class="third">
             <h3>Portrait Packages</h3>
                 <h4><em>Standard</em> Portrait Package</h4>
                   <p>Package includes:</p>
-           <nav>
-            <ul class="nav">
+
+            <ul>
                 <li>Professional photographer;</li>
                 <li>Photographs of friends, family or persons of your choice (>3 hours);</li>
                 <li>Fifteen 6x9 mounted photographs of images of your choice;</li>
                 <li>Editing & image adjustments;</li>
                 <li>Convenient handbag album to "show friends".</li>
                <li><strong>Price: £695.00</strong></li>
-            </ul></nav>
+            </ul>
 
        </section>
         <h4><em>Premier</em> Portrait Package</h4>
             <p>Package includes:</p>
-               <nav> <ul class="nav">
+                <ul>
                     <li>Professional photographer;</li>
                     <li>Photographs of friends, family or persons of your choice (maximum 6 hours);</li>
                     <li>Twenty-five 6x9 mounted photographs of images of your choice;</li>
                     <li>Editing & image adjustments;</li>
                     <li>Convenient handbag album to &quot;show friends&quot;</li>
              <li><p><strong>Price: £895.00</strong></p></li>
-               </ul> </nav>
+               </ul>
 <footer>
          <p><a href="index.html#top">Top</a></p>
 </footer>
