--- a/news.html
+++ b/news.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Arrow photography</title>
+    <link href="assets/css/styles.css" rel="stylesheet" media="all" />
 </head>
 <body>
 <div class="container">
