--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Arrow Photography</title>
+    <link href="../assets/css/styles.css" rel="stylesheet" media="all" />
 </head>
 <body>
 <header>
