Added reset and normalize css code.

--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Welcome to Arrow Photography</title>
+    <link href="assets/css/reset.css" rel="stylesheet" media="all" />
+    <link href="assets/css/normalize.css" rel="stylesheet" media="all" />
     <link href="assets/css/styles.css" rel="stylesheet" media="all" />
 </head>
 <body>
     <header>
         <h1>Arrow Photography</h1>
+        <nav>
             <ul class="nav">
                 <li><a href="Index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -16,6 +19,7 @@
                 <li><a href="news.html">News</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
+            </nav>
     </header>
       <div id="content">
           <p>
@@ -79,11 +83,13 @@
                 </div>
               </div>
             </div>
-        <div id="footer">
+        <footer>
+            <nav>
             <ul class="nav">
             <li><a href="general/terms.html">Terms &amp; Conditions</a></li>
             <li><a href="general/faq.html"><abbr title="Frequently Asked Questions">FAQ</abbr></a></li>
         </ul>
-            </div>
+                </nav>
+            </footer>
 </body>
 </html>
