Additional coding in FAQ and Terms

--- a/Index.html
+++ b/Index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Welcome to Arrow Photography</title>
-    <link href="assets/css/reset.css" rel="stylesheet" media="all" />
-    <link href="assets/css/normalize.css" rel="stylesheet" media="all" />
+    <link href="assets/css/reset.css" rel="stylesheet" media="all"/>
+    <link href="assets/css/normalize.css" rel="stylesheet" media="all"/>
     <link href="assets/css/styles.css" rel="stylesheet" media="all" />
 </head>
 <body>
@@ -25,7 +25,7 @@
           <p>
               <img src="assets/images/ArrowPhotograhyFrontPage1.jpg" alt="Wedding Photography" /></p>
          <p>
-                <div class="first section">
+                <section class="first">
                     <h2>Welcome to Arrow Photography</h2>
                 <p>
                 <img src="assets/images/ArrowPhotograhyFrontPage1.jpg" alt="Wedding Photography" /></p>
@@ -46,8 +46,9 @@
         <p>Our style is <em>friendly and relaxed</em> enabling us to capture all those special
                 moments throughout the day with the minimum of fuss.
         </p>
-          </div>
-    <div class="second section">
+          </section>
+             <div>
+    <section class="second">
         <h2>Recent Events</h2>
     <div class=" first subsection">
         <h3>Adele and John's Wedding</h3>
@@ -67,6 +68,7 @@
     <p>More&hellip;
     </p>
 </div>
+        </section>
     <div class="second subsection">
             <h3>Jane and Richard's Wedding</h3>
     <p>Jane and Richard's Wedding &ldquo; Jane and Richard's &rdquo; wedding was at <em>St. Wilfrid's Church, Calverley</em>
@@ -81,8 +83,9 @@
     <p>More &hellip;
     </p>
                 </div>
-              </div>
+        </div>
             </div>
+    </section>
         <footer>
             <nav>
             <ul class="nav">
