--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8"/>
     <title>Contact Arrow photography</title>
     <link href="assets/css/styles.css" rel="stylesheet" media="all" />
+    <style>
+
+        form.table{
+            display:table;
+            width:600px;
+            margin: 24px auto;
+        }
+        label.row{
+            display:table-row;
+        }
+        .cell{
+            display:table-cell;
+        }
+        span.cell{
+            width:25%;
+        }
+        input,textarea{
+            width:100%;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -122,12 +142,15 @@
         </tr>
 
     </table>
+            <footer>
+                <nav>
+                    <ul class="nav">
+                        <li><a href="general/terms.html">Terms &amp; Conditions</a></li>
+                        <li><a href="general/faq.html"><abbr title="Frequently Asked Questions">FAQ</abbr></a></li>
+                    </ul>
+                </nav>
+            </footer>
     </form>
 
-    <ul class="nav">
-        <li><a href="general/terms.html">Terms &amp; Conditions</a></li>
-        <li><a href="general/faq.html"><abbr title="Frequently Asked Questions">FAQ</abbr></a></li>
-    </ul>
-</footer>
 </body>
 </html>
