--- a/general/terms.html
+++ b/general/terms.html
@@ -2,9 +2,97 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title></title>
+    <title>Terms &amp; Conditions</title>
+    <link href="../assets/css/styles.css" rel="stylesheet" media="all" />
 </head>
+
+
 <body>
+    <header>
+        <h1><span>Arrow Photography</span></h1>
+        <nav>
+
+            <ul class="nav">
+                <li><a href="../Index.html">Home</a></li>
+                <li><a href="../about.html">About</a></li>
+                <li><a href="../portfolio/index.html">Portfolio</a></li>
+                <li><a href="../packages/index.html">Packages</a></li>
+                <li><a href="../news.html">News</a></li>
+                <li><a href="../contact.html">Contact</a></li>
+            </ul>
+        </nav>
+
+
+        <style>
+            p.threecolumns{
+                /*width: 300px;
+                padding: 10px;
+                display: table-cell;
+                */
+                -webkit-column-count: 3;
+                -webkit-column-gap: 10px;
+                -moz-column-count: 3;
+                -moz-column-gap: 10px;
+                -ms-column-count: 3;
+                -ms-column-gap: 10px;
+                -o-column-count: 3;
+                -o-column-gap: 10px;
+                column-count: 3;
+                column-gap: 10px;
+
+            }
+        </style>
+        </header>
+
+        <div id="page" class="container">
+        <nav>
+
+        <section class="first">
+            <p><img src="../assets/images/ArrowPhotograhyFrontPage3.jpg" alt="Wedding Photography" /></p>
+            <h2>Arrow Photography</h2>
+
+   <p class="threecolumns">
+                Arrow Photography's Terms &amp; Conditions
+                Aenean vitae felis id nibh porttitor tristique.
+                    Nullam mattis elit sed pretium aliquet.
+                    Maecenas molestie porttitor est, ac porttitor
+                    risus pretium ac. Aenean elementum quam in placerat
+                    luctus. Aenean id vehicula leo. Cras non semper ipsum.
+                    Nunc ligula enim, iaculis ac ultrices eget, bibendum
+                    eget tellus. Praesent felis quam, pharetra eget
+                    augue ut, blandit tincidunt elit. Ut sit amet
+                    placerat nibh. Vivamus sapien orci, hendrerit
+                    et molestie et, lacinia nec magna. Etiam diam erat,
+                    aliquet sed tincidunt non, fermentum ut justo.
+            </p>
+        </section>
+    <p><p class="threecolumns">
+
+                Lorem Ipsum Dolor Sit Amet
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Donec vel urna eu augue sollicitudin interdum sed non libero.
+                    Vestibulum facilisis lacus sit amet mi egestas, eu blandit
+                    neque imperdiet. Vestibulum ante ipsum primis in faucibus
+                    orci luctus et ultrices posuere cubilia Curae; Sed ac nisl
+                    rutrum neque iaculis elementum. Cras dui massa, tempor id
+                    odio sed, faucibus adipiscing eros. Maecenas a suscipit eros,
+                    vitae accumsan dolor. Duis pulvinar purus urna, ac consequat
+                    diam consectetur a.
+                </p>
+    <p><p class="threecolumns">
+
+            Lorem Ipsum Dolor Sit Amet
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Donec vel urna eu augue sollicitudin interdum sed non libero.
+                Vestibulum facilisis lacus sit amet mi egestas, eu blandit
+                neque imperdiet. Vestibulum ante ipsum primis in faucibus
+                orci luctus et ultrices posuere cubilia Curae; Sed ac nisl
+                rutrum neque iaculis elementum. Cras dui massa, tempor id
+                odio sed, faucibus adipiscing eros. Maecenas a suscipit eros,
+                vitae accumsan dolor. Duis pulvinar purus urna, ac consequat
+                diam consectetur a.
+            </p>
+        </nav>
 
 </body>
 </html>
