--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
 <header>
-
+<nav>
     <h1>Arrow Photography</h1>
      <ul>
         <li><a href="Index.html">Home</a></li>
@@ -18,6 +18,7 @@
         <li><a href="news.html">News</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
+    </nav>
 </header>
 <div id="content">
     <section class="first">
