Additional coding in FAQ and Terms

--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,11 @@
         span.cell{
             width:25%;
         }
-        input,textarea{
+        input,textarea,select{
             width:100%;
+        }
+        input[type=radio]{
+            width: auto;
         }
     </style>
 </head>
@@ -38,7 +41,7 @@
             <li><a href="contact.html">Contact</a></li>
          </ul></nav>
         </header>
-<footer>
+<div i="content">
     <h2>Contact Arrow Photography</h2>
     <table>
         <caption>Class Contact Details</caption>
@@ -113,35 +116,38 @@
 
 </table>
     
-    
-        <form method="post" action="http://webdesignstudents.co.uk/students/response.php">
-            <table>
-        <tr><td><label for="contactname">Name:</label></td> <td><input type="text" name="contactname" id="contactname" required/></td></tr>
-        <tr><td><label for="contactemail">Email:</label></td> <td><input type="email" name="contactemail" id="contactemail" required/></td></tr>
-        <tr><td>Gender:</td> 
-            <td><label><input type="radio" name="gender" value="male"/>Male</label>
-             <label><input type="radio" name="gender" value="female" checked/>Female
-        </label></td>
-        </tr>
-        <tr>
-            <td><label for="location">Location: </label></td>
-           <td>
+        <form method="post" action="http://webdesignstudents.co.uk/students/response.php" class="table">
+            <label class="row">
+                <span class="cell">*Name:</span>
+                <input type="text" name="contactname" required class="cell"/>
+            </label>
+            <label class="row">
+                <span class="cell">Email:</span>
+                <input type="text" name="contactname" required class="cell"/>
+                </label>
+        <label class="row">
+            <span class="cell">Gender:</span>
+            <input type="radio" name="gender" value="male"/>Male
+            <input type="radio" name="gender" value="female" checked/>Female
+            </label>
+        <label class="row">
+            <span class="cell">Location:</span>
                <select name="location" id="location">
                 <option value="Brighton">Brighton & Hove</option>
                 <option value="Worthing">Worthing</option>
                 <option value="Eastbourne">Eastbourne</option>
             </select>
-           </td>
-        </tr>
-        <tr><td><label for="comment">Comment:</label></td>
-           <td><textarea name="comment" id="comment" cols="18" rows="8" required></textarea></td>
-        </tr>
-        <tr>
-            <!-- <td>&nbsp;</td> -->
-            <td colspan="2"><input type="submit" name="submit" value="Send Comment"/></td>
-        </tr>
-
-    </table>
+            </label>
+            <label class="row">
+                <span class="cell">*Comment:</span>
+                <textarea name="comment" cols="18" rows="8" required class="cell"></textarea>
+            </label>
+            <label class="row">
+                <span class="cell">*Required Information</span>
+                <input type="submit" name="submit" class="cell"/>
+            </label>
+            </form>
+    </div>
             <footer>
                 <nav>
                     <ul class="nav">
@@ -150,7 +156,6 @@
                     </ul>
                 </nav>
             </footer>
-    </form>
-
+</div>
 </body>
 </html>
