--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Welcome to Arrow Photography</title>
-    <link href="assets/css/reset.css" rel="stylesheet" media="all"/>
-    <link href="assets/css/normalize.css" rel="stylesheet" media="all"/>
-    <link href="assets/css/styles.css" rel="stylesheet" media="all" />
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
+
+    <style>
+        section h3+p{
+            font-style: italic;
+            font-weight: bold;
+            color:#0000FF;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -68,7 +74,6 @@
     <p>More&hellip;
     </p>
 </div>
-        </section>
     <div class="second subsection">
             <h3>Jane and Richard's Wedding</h3>
     <p>Jane and Richard's Wedding &ldquo; Jane and Richard's &rdquo; wedding was at <em>St. Wilfrid's Church, Calverley</em>
@@ -83,6 +88,7 @@
     <p>More &hellip;
     </p>
                 </div>
+    </section>
         </div>
             </div>
     </section>
