--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Contact Arrow photography</title>
-    <link href="assets/css/styles.css" rel="stylesheet" media="all" />
+    <link href="assets/css/oldstyles.css" rel="stylesheet" media="all" />
     <style>
 
         form.table{
