--- a/general/faq.html
+++ b/general/faq.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Frequently Asked Questions</title>
-    <link href="../assets/css/styles.css" rel="stylesheet" media="all" />
+    <link href="../assets/css/oldstyles.css" rel="stylesheet" media="all" />
     <style>
 
         form.table{
