--- a/news.html
+++ b/news.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Arrow photography</title>
-    <link href="assets/css/styles.css" rel="stylesheet" media="all" />
+    <link href="assets/css/oldstyles.css" rel="stylesheet" media="all" />
+    <style>
+        section>h2{
+        color: #FF0000;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
